@@ -4,6 +4,7 @@ procps-ng-NEXT
   * ps: display control group name with -o cgname
   * ps: Fallback to attr/current for context Debian #786956
   * tests: Conditionally add prctl Debian #816237
+  * pidof: check cmd if space in argv0. GitLab #4
 
 procps-ng-3.3.11
 ----------------
